--- a/package.json
+++ b/package.json
@@ -4,26 +4,35 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
-    "expo": "~53.0.9",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.33",
+    "expo-checkbox": "~5.0.8",
+    "expo-status-bar": "~3.0.9",
+    "lodash": "^4.17.23",
     "lucide-react-native": "^0.564.0",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-svg": "^15.15.3",
-    "react-native-screens": "~4.11.1"
+    "prop-types": "^15.8.1",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-draggable-flatlist": "^4.0.3",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-svg": "15.12.1",
+    "react-native-swipeable-item": "^2.0.9",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
